Revision history for Thread-Csp

{{$NEXT}}

0.005     2022-01-07 14:46:45+01:00 Europe/Amsterdam
          - Improve compatibility with older perl versions

0.004     2022-01-04 18:44:16+01:00 Europe/Amsterdam
          - Fix allocation of mthread
          - Add atomics support for Visual C++
          - Fix return type of run_thread on Windows

0.003     2021-12-30 10:34:27+01:00 Europe/Amsterdam
          - Use stdc malloc instead of PerlMemShared
          - Define CX_LEAVE_SCOPE when not available

0.002     2021-12-29 16:19:49+01:00 Europe/Amsterdam
          - Various documentation fixes

0.001     2021-12-29 15:20:44+01:00 Europe/Amsterdam
          Initial release to an unsuspecting world