@@ -37,9 +37,9 @@ This sends a value over the channel. It will block until another thread is prepa
 
 This receives a value from the channel. It will block until another thread is prepared to send the value.
 
-=method set_notify($handle, $value)
+=method get_notifier()
 
-This will cause C<$value> to be written to C<$handle> whenever a new value becomes available, unless it's already being read. B<THIS METHOD IS PARTICULARLY EXPERIMENTAL>.
+This will return a filehandle that will be written to when a value has been send to the channel.
 
 =method close()
 
