@@ -1,11 +1,7 @@
-typedef struct {
-	int fd;
-	const char* buffer;
-	size_t buffer_size;
-} Notification;
+typedef int Notification;
 
 void notification_init(Notification* notification);
-void S_notification_set(pTHX_ Notification*, PerlIO*, SV* value);
-#define notification_set(notification, handle, value) S_notification_set(aTHX_ notification, handle, value)
+SV* S_notification_create(pTHX_ Notification* notification);
+#define notification_create(notification) S_notification_create(aTHX_ notification)
 void notification_trigger(Notification*);
 void notification_unset(Notification*);
